--- a/app/src/main/res/layout/activity_create_budget.xml
+++ b/app/src/main/res/layout/activity_create_budget.xml
@@ -1,10 +1,73 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.anony.mybudgetpal.activities.CreateBudget">
 
-<fragment android:name="com.anony.mybudgetpal.activities.CreateBudget$EnterAmountFragment"
-    android:id="@+id/headlines_fragment"
-    android:layout_width="0dp"
-    android:layout_height="match_parent" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/durationCount"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Weeks"
+        android:id="@+id/durationType"
+        android:layout_toEndOf="@+id/durationCount"
+        android:layout_alignBaseline="@+id/durationCount"
+        android:layout_toRightOf="@+id/durationCount" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
+        android:ems="10"
+        android:id="@+id/amount"
+        android:layout_marginTop="16dp"
+        android:layout_below="@+id/durationCount"
+        android:layout_alignLeft="@+id/durationCount"
+        android:layout_alignStart="@+id/durationCount" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="$"
+        android:id="@+id/textView"
+        android:layout_toEndOf="@+id/amount"
+        android:layout_alignBaseline="@+id/amount"
+        android:layout_toRightOf="@+id/amount" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create Budget"
+        android:id="@+id/createBudgetButton"
+        android:layout_below="@+id/amount"
+        android:layout_alignLeft="@+id/durationCount"
+        android:layout_alignStart="@+id/durationCount"
+        android:layout_marginTop="16dp"
+        android:layout_alignRight="@+id/durationCount"
+        android:layout_alignEnd="@+id/durationCount"
+        android:onClick="onCreateBudgetClicked" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/budgetList"
+        android:layout_below="@+id/createBudgetButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="16dp" />
 
 </RelativeLayout>
