--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -1,37 +1,66 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/expense_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.anony.mybudgetpal.activities.AddExpense">
 
-    <com.anony.mybudgetpal.ui.LabeledTextView
+    <RelativeLayout
+        android:id="@+id/expense_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/addExpense_nameInput"
-        app:label="Name"
-        app:type="string" />
+        android:layout_height="match_parent">
 
-    <com.anony.mybudgetpal.ui.LabeledTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/addExpense_priceInput"
-        android:layout_below="@+id/addExpense_nameInput"
-        app:label="Price"
-        app:type="number" />
+        <com.anony.mybudgetpal.ui.LabeledTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/addExpense_priceInput"
+            android:layout_below="@+id/addExpense_nameInput"
+            app:label="Price"
+            app:type="number" />
 
-    <com.anony.mybudgetpal.ui.ButtonView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/addExpense_submitButton"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:textAllCaps="true"
-        android:text="Add Expense"
-        android:onClick="onSubmitButtonClicked"/>
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="48dp"
+            android:id="@+id/editText2"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:editable="false"
+            android:textIsSelectable="false"
 
-</RelativeLayout>
+            />
+
+        <com.anony.mybudgetpal.ui.ButtonView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/addExpense_submitButton"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:textAllCaps="true"
+            android:text="Add Expense"
+            android:onClick="onSubmitButtonClicked"/>
+
+        <com.anony.mybudgetpal.ui.LabeledTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/addExpense_nameInput"
+            app:label="Name"
+            app:type="string"
+            android:layout_below="@+id/editText2"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
+
+    <!-- Navigation Drawer -->
+    <ListView android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"/>
+
+</android.support.v4.widget.DrawerLayout>
