--- a/app/src/main/res/layout/activity_create_budget.xml
+++ b/app/src/main/res/layout/activity_create_budget.xml
@@ -1,11 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.anony.mybudgetpal.activities.CreateBudget">
 
     <EditText
@@ -36,7 +33,8 @@
         android:layout_marginTop="16dp"
         android:layout_below="@+id/durationCount"
         android:layout_alignLeft="@+id/durationCount"
-        android:layout_alignStart="@+id/durationCount" />
+        android:layout_alignStart="@+id/durationCount"
+        android:layout_alignParentEnd="false" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -62,12 +60,14 @@
         android:onClick="onCreateBudgetClicked" />
 
     <ListView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/budgetList"
         android:layout_below="@+id/createBudgetButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="16dp" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="false" />
 
 </RelativeLayout>
