--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -1,10 +1,14 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.anony.mybudgetpal.activities.AddExpense">
-
+    tools:context="com.anony.mybudgetpal.activities.AddExpense"
+    android:id="@+id/expense_drawer_layout">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    
     <com.anony.mybudgetpal.ui.PrimaryHeaderView
         android:layout_width="match_parent"
         android:layout_height="72dp"
@@ -56,3 +60,8 @@
     </RelativeLayout>
 
 </RelativeLayout>
+<ListView
+    android:layout_width="240dp"
+    android:layout_height="match_parent"
+    android:id="@+id/left_drawer"/>
+</DrawerLayout>
