--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="50dp"
-    android:paddingRight="50dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#f1f8e9"
@@ -12,29 +12,37 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="34dp"
         android:text="Welcome"
-        android:id="@+id/welcome_welcomeText"
+        android:id="@+id/welcome_title"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="25dp" />
+        android:layout_marginTop="25dp"
+        android:textColor="@color/dark_green"/>
 
-    <TextView
+    <com.anony.mybudgetpal.ui.RobotoTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="To help you better manage your budget, we need to ask you exactly two questions."
         android:id="@+id/welcome_paragraph1"
-        android:layout_below="@+id/welcome_welcomeText"
+        android:layout_below="@+id/welcome_title"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:textSize="16dp"
+        android:bufferType="spannable"
+        android:alpha=".87"/>
 
-    <TextView
+    <com.anony.mybudgetpal.ui.RobotoTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text='You can always change your answers later by going to "Budget" in the main menu.'
+        android:id="@+id/welcome_paragraph2"
         android:layout_below="@+id/welcome_paragraph1"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:textSize="16dp"
+        android:bufferType="spannable"
+        android:alpha=".87"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -43,5 +51,6 @@
         android:id="@+id/welcome_continueButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:onClick="onWelcomeContinueButtonClicked"/>
+        android:onClick="onWelcomeContinueButtonClicked"
+        />
 </RelativeLayout>
