--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="white_opaque">#FFFFFFFF</color>
+    <color name="white">#FFFFFFFF</color>
     <color name="light_green">#DCEDC8</color>
     <color name="blue">#B3E5FC</color>
     <color name="green">#8BC34A</color>
