--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,10 +3,11 @@
 
     <!-- Base application theme. -->
     <style name="DefaultTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <item name="android:windowBackground">@color/white_opaque</item>
+        <item name="android:windowBackground">@color/white</item>
         <item name="android:actionBarStyle">@style/defualtActionBar</item>
         <item name="android:textViewStyle">@style/def_textView</item>
         <item name="android:listViewStyle">@style/def_listView</item>
+        <item name="android:buttonStyle">@style/def_button</item>
         <!--<item name="android:fontFamily">sans-serif</item>-->
 
         <item name="android:displayOptions">showHome|homeAsUp|showTitle</item>
@@ -23,6 +24,15 @@
 
      <!-- Font Styles. -->
      <!--Layout Styles. -->
+    <style name="def_button"
+        parent = "@android:style/Widget.Button">
+        <item name = "android:layout_width">wrap_content</item>
+        <item name = "android:layout_height">wrap_content</item>
+        <item name = "android:paddingLeft">40dp</item>
+        <item name = "android:paddingRight">40dp</item>
+        <item name = "android:background">@drawable/button_green</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
     <style name="def_listView">
         <item name = "android:background">@color/light_green</item>
@@ -32,6 +42,9 @@
     <style name="def_textView">
         <item name="android:paddingLeft">@dimen/activity_horizontal_margin</item>
         <item name="android:paddingRight">@dimen/activity_vertical_margin</item>
+        <item name="android:layout_alignParentStart">true</item>
+        <item name="android:layout_marginTop">15dp</item>
+        <item name="android:textSize">16dp</item>
     </style>
 
     <!--<style name="def_relativeLayout">-->
